created first draft website design (wordle, about me)

--- a/index.html
+++ b/index.html
@@ -2,27 +2,93 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Your Name | Portfolio</title>
+  <title>Jovia Low</title>
   <link rel="stylesheet" href="styles.css" />
+
+  <!-- Fonts from Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;600&display=swap" rel="stylesheet" />
+
+
+
 </head>
-<body>
+
+<body  style="background-color: #121213">
 
   <header>
-    <h1>Your Name</h1>
     <nav>
-      <a href="#home">Home</a>
+      <a href="#about">About</a>
       <a href="#projects">Projects</a>
       <a href="#about">About</a>
       <a href="#contact">Contact</a>
     </nav>
   </header>
 
-  <section id="home">
-    <!-- your intro goes here -->
+  <h1>Hi, I'm </h1>
+
+  <section id="name-wordle">
+    <div class="wordle-row">
+    <div class="tile"><div class="flip yellow">A</div></div>
+    <div class="tile"><div class="flip gray">G</div></div>
+    <div class="tile"><div class="flip yellow">I</div></div>
+    <div class="tile"><div class="flip gray">L</div></div>
+    <div class="tile"><div class="flip gray">E</div></div>
+    </div>
+
+    <div class="wordle-row">
+    <div class="tile"><div class="flip gray">E</div></div>
+    <div class="tile"><div class="flip yellow">A</div></div>
+    <div class="tile"><div class="flip gray">G</div></div>
+    <div class="tile"><div class="flip gray">E</div></div>
+    <div class="tile"><div class="flip gray">R</div></div>
+    </div>
+
+    <div class="wordle-row">
+    <div class="tile"><div class="flip gray">S</div></div>
+    <div class="tile"><div class="flip gray">H</div></div>
+    <div class="tile"><div class="flip yellow">A</div></div>
+    <div class="tile"><div class="flip gray">R</div></div>
+    <div class="tile"><div class="flip gray">P</div></div>
+    </div>
+    
+  <div class="wordle-row">
+    <div class="tile"><div class="flip green">J</div></div>
+    <div class="tile"><div class="flip green">O</div></div>
+    <div class="tile"><div class="flip green">V</div></div>
+    <div class="tile"><div class="flip green">I</div></div>
+    <div class="tile"><div class="flip green">A</div></div>
+</div>
+
+    <div class="wordle-row">
+    <div class="tile"></div>
+    <div class="tile"></div>
+    <div class="tile"></div>
+    <div class="tile"></div>
+    <div class="tile"></div>
+
+  </div>
+
+
+</section>
+
+
+  <section id="about">
+    <div class="about-card">    
+        <h2>About me</h2>
+        <p>Hi there! I'm Jovia, and I'm currently studying computer science at UC Santa Barbara. I'm interested in philosophy, aerospace, art, and software engineering! In my free time you'll find me playing poker and playing all the NYT games.</p>
+    </div>
+
+     <div class="about-image">
+      <img src="selfie1.jpg" alt="Photo of Jovia">
+    </div>
   </section>
 
-  <section id="projects">
-    <!-- project cards go here -->
+  <section id="experience">
+   <h2>What I've done</h2>
+        <p></p>
+    </div>
+
   </section>
 
   <section id="about">
@@ -33,5 +99,6 @@
     <!-- contact info -->
   </section>
 
+  <script src="script.js"></script>
 </body>
 </html>
