--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       <h2>About me</h2>
       <p>
         Hi there! I'm Jovia, and I'm currently studying computer science at UC Santa Barbara.
-        I'm interested in philosophy, aerospace, art, and software engineering. In my free time
+        I'm interested in philosophy, aerospace, and art. In my free time
         you'll find me playing poker and doing all the NYT games.
       </p>
     </div>
