--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <title>Jovia Low</title>
+  <meta name="description" content="Portfolio and personal website of Jovia Low, UC Santa Barbara computer science student. Projects, resume, linkedin, github, and contact information.">
+
   <link rel="stylesheet" href="styles.css" />
 
   <!-- Fonts from Google Fonts -->
@@ -91,7 +93,7 @@
 
 <section id="experience">
   <div class="experience-card">
-    <h2>What I've done</h2>
+    <h2>A snapshot of what I've done</h2>
     <ul>
       <li>
         <strong>Research in UCSB's networking MOMENT Lab</strong> — querying / analyzing broadband
@@ -102,7 +104,7 @@
         workflows using ServiceNow, PowerBI, and internal tools.
       </li>
       <li>
-        <strong>Research Internships</strong> — at NASA Ames Research Center and Lawrence Berkeley Laboratory
+        <strong>Research Internships</strong> — at NASA Ames Research Center and Lawrence Berkeley Laboratory (<a href="https://ntrs.nasa.gov/citations/20230013018">HERE</a> is my published research paper from NASA)
       </li>
       <li>
         <strong>Personal Projects</strong> — a poker bot, a flight
@@ -119,7 +121,6 @@
         <h2>Reach me!</h2>
       <p>
         jovialow23@gmail.com | jovia@ucsb.edu | <a href="https:www.linkedin.com/in/jovia-low">linkedin</a>
-
       </p>
   </section>
     </div>
