--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <header>
     <nav>
       <a href="#about">About</a>
-      <a href="#experiences">Experiences</a>
+      <a href="#experience">Experiences</a>
       <a href="#contact">Contact</a>
     </nav>
   </header>
@@ -96,7 +96,7 @@
     <h2>A snapshot of what I've done</h2>
     <ul>
       <li>
-        <strong>Research in UCSB's networking MOMENT Lab</strong> — querying / analyzing broadband
+        <strong>Research in UCSB's networking MOMENT Lab</strong> — webscaping, querying, and analyzing broadband
         affordability data using PostgreSQL, Docker, and Python.
       </li>
       <li>
