separated personal projects into own section, linked to github projects

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <nav>
       <a href="#about">About</a>
       <a href="#experience">Experiences</a>
+      <a href="#projects">Projects</a>
       <a href="#contact">Contact</a>
     </nav>
   </header>
@@ -106,9 +107,26 @@
       <li>
         <strong>Research Internships</strong> — at NASA Ames Research Center and Lawrence Berkeley Laboratory (<a href="https://ntrs.nasa.gov/citations/20230013018">HERE</a> is my published research paper from NASA)
       </li>
+    </ul>
+  </div>
+</section>
+
+<section id="projects">
+  <div class="projects-card">
+    <h2>Some personal projects</h2>
+    <strong><a href="https://github.com/mintoku">My Github</a></strong> <br> <br>
       <li>
-        <strong>Personal Projects</strong> — a poker bot, a flight
-        price tracker, and a Discord Wordle stats bot (See more on my <a href="https://github.com/mintoku">github</a>!)
+        <a href="https://github.com/mintoku/flight-price-tracker">Southwest Flight Price tracker</a>
+        <ul>
+            <li>Automated flight price tracking tool using Python, implementing screen-region capture, OCR parsing, and Discord webhook notifications.</li>
+            <li>UI automation techniques (PyAutoGUI), OCR processing (Tesseract), and event-driven architecture to monitor web content.</li>
+        </ul>
+        <a href="https://github.com/jenna360/acm-poker">Tournament Poker Bot</a>
+        <ul>
+            <li>Developed a Python-based poker bot for an ACM online tournament, implementing hand evaluation and strategic decision logic</li>
+            <li>Implemented logic to parse game state input and generate valid poker actions under performance constraints (e.g., time limits, interface specifications).</li>
+        </ul>
+
       </li>
 
       
