--- a/index.html
+++ b/index.html
@@ -141,14 +141,19 @@
     <div class="contact-card">
         <h2>Reach me!</h2>
         <form id="contact-form">
-            <label>Jovia Low</label>
+            <label>Your Name:</label>
             <input type="text" name="name" required />
 
-            <labe>Email</label>
-            <input type="text" name="email" required />
+            <br>
 
-            <label>Your message</label>
-            <textarea name="message" rows="4" required></textarea>
+            <labe>Your Email:</label>
+            <input type="text" name="email" required />
+            <br><br>
+
+            <label>Your message:</label> <br>
+            <textarea name="message" rows="5" cols="80" required></textarea>
+
+            <br>
 
             <button type="submit">Send</button>
             <p id="contact-status" class=""
