changed title and about me

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Jovia Low</title>
+  <title>Jovia Low - Personal Portfolio</title>
   <meta name="description" content="Portfolio and personal website of Jovia Low, UC Santa Barbara computer science student. Projects, resume, linkedin, github, and contact information.">
 
   <link rel="stylesheet" href="styles.css" />
@@ -85,8 +85,9 @@
       <h2>About me</h2>
       <p>
         Hi there! I'm Jovia, and I'm currently studying computer science at UC Santa Barbara.
-        I chose CS because I love the idea of being able to use software in genuinely exciting, 
-        meaningful applications.
+        I chose CS because I love the idea of being able to use software in applications I 
+        find really exciting, whether that be research, industry, or personal projects I 
+        find interesting.
         I'm interested in philosophy, aerospace, and art. In my free time
         you'll find me playing poker and doing all the NYT games. <br> <br> <br>
         Let's connect! <br><br>
