changed title and about me

--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 <head>
   <meta charset="UTF-8" />
   <title>Jovia Low - Personal Portfolio</title>
-  <meta name="description" content="Portfolio and personal website of Jovia Low, UC Santa Barbara computer science student. Projects, resume, linkedin, github, and contact information.">
+  <meta name="description" content="Portfolio and
+   personal website of Jovia Low, UC Santa Barbara
+   undergraduate computer science student. UCSB Projects, 
+   resume, linkedin, github, and contact information. 
+   For CS and SWE recruiters.">
 
   <link rel="stylesheet" href="styles.css" />
 
