--- a/index.html
+++ b/index.html
@@ -92,8 +92,7 @@
       <p>
         Hi there! I'm Jovia, and I'm currently studying computer science at UC Santa Barbara.
         I chose CS because I love the idea of being able to use software in applications I 
-        find really exciting, whether that be research, industry, or personal projects I 
-        find interesting.
+        find fascinating.
         I'm interested in philosophy, aerospace, and art. In my free time
         you'll find me playing poker and doing all the NYT games. <br> <br> <br>
         Let's connect! <br><br>
@@ -127,18 +126,35 @@
     <h2>Some personal projects</h2>
     <strong><a href="https://github.com/mintoku">My Github</a></strong> <br> <br>
       <li>
-        <a href="https://github.com/mintoku/flight-price-tracker">Southwest Flight Price tracker</a>
+        <bold><a href="https://github.com/mintoku/flight-price-tracker">Southwest Flight Price tracker</a></bold>
         <ul>
             <li>Automated flight price tracking tool using Python, implementing screen-region capture, OCR parsing, and Discord webhook notifications.</li>
             <li>UI automation techniques (PyAutoGUI), OCR processing (Tesseract), and event-driven architecture to monitor web content.</li>
         </ul>
         <li>
-            <a href="https://github.com/jenna360/acm-poker">Tournament Poker Bot</a>
+            <bold><a href="https://github.com/jenna360/acm-poker">Tournament Poker Bot</a></bold>
         <ul>
             <li>Python-based poker bot for an ACM online tournament, implementing hand evaluation and strategic decision logic</li>
             <li>Game state logic and poker actions under constraints.</li>
         </ul>
         </li>
+
+        <strong><a href="https://github.com/mintoku">My Github</a></strong> <br> <br>
+      <li>
+        <strong><a href="https://github.com/mintoku/flight-price-tracker">Southwest Flight Price tracker</a></strong>
+        <ul>
+            <li>Automated flight price tracking tool using Python, implementing screen-region capture, OCR parsing, and Discord webhook notifications.</li>
+            <li>UI automation techniques (PyAutoGUI), OCR processing (Tesseract), and event-driven architecture to monitor web content.</li>
+        </ul>
+        <li>
+        <strong><a href="http://jovialow.me/">jovialow.me</a></strong>
+        <ul>
+            <li>This website actually contains a serverless backend for the contact messaging feature.
+                Deployed API Gateway -> Lambda -> SES pipeline to  process and email form submissions.
+                Used AWS Lambda, AWS API Gateway, Amazon SES, IAM permissions REST APIs
+            </li>
+        </ul>
+        </li>        
         
       </li>
 
