--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
         <ul>
             <li>This website actually contains a serverless backend for the contact messaging feature.
                 Deployed API Gateway -> Lambda -> SES pipeline to  process and email form submissions.
-                Used AWS Lambda, AWS API Gateway, Amazon SES, IAM permissions REST APIs
+                Used AWS Lambda, AWS API Gateway, Amazon SES, IAM permissions, REST APIs
             </li>
         </ul>
         </li>        
