reformat projects section

--- a/index.html
+++ b/index.html
@@ -123,8 +123,7 @@
 
 <section id="projects">
   <div class="projects-card">
-    <h2>Some personal projects</h2>
-    <strong><a href="https://github.com/mintoku">My Github</a></strong> <br> <br>
+    <h2>Some personal projects <a href="https://github.com/mintoku">(Github here)</a></h2>
       <li>
         <bold><a href="https://github.com/mintoku/flight-price-tracker">Southwest Flight Price tracker</a></bold>
         <ul>
@@ -139,7 +138,6 @@
         </ul>
         </li>
 
-        <strong><a href="https://github.com/mintoku">My Github</a></strong> <br> <br>
       <li>
         <strong><a href="https://github.com/mintoku/flight-price-tracker">Southwest Flight Price tracker</a></strong>
         <ul>
