--- a/index.html
+++ b/index.html
@@ -124,14 +124,9 @@
 <section id="projects">
   <div class="projects-card">
     <h2>Some personal projects <a href="https://github.com/mintoku">(Github here)</a></h2>
-      <li>
-        <bold><a href="https://github.com/mintoku/flight-price-tracker">Southwest Flight Price tracker</a></bold>
-        <ul>
-            <li>Automated flight price tracking tool using Python, implementing screen-region capture, OCR parsing, and Discord webhook notifications.</li>
-            <li>UI automation techniques (PyAutoGUI), OCR processing (Tesseract), and event-driven architecture to monitor web content.</li>
-        </ul>
+      
         <li>
-            <bold><a href="https://github.com/jenna360/acm-poker">Tournament Poker Bot</a></bold>
+            <strong><a href="https://github.com/jenna360/acm-poker">Tournament Poker Bot</a></strong>
         <ul>
             <li>Python-based poker bot for an ACM online tournament, implementing hand evaluation and strategic decision logic</li>
             <li>Game state logic and poker actions under constraints.</li>
