adjust design formatting

--- a/projects.html
+++ b/projects.html
@@ -16,30 +16,12 @@
     <div class="tile"><div class="flip green">R</div></div>
     <div class="tile"><div class="flip yellow">O</div></div>
     <div class="tile"><div class="flip green">J</div></div>
-    <div class="tile"><div class="flip yellow">E</div></div>
-    <div class="tile"><div class="flip gray">C</div></div>
+    <div class="tile"><div class="flip gray">E</div></div>
+    <div class="tile"><div class="flip green">C</div></div>
     <div class="tile"><div class="flip green">T</div></div>
     <div class="tile"><div class="flip yellow">S</div></div>
 </section>
 
-<section id="experience">
-  <div class="experience-card">
-    <h2>A snapshot of what I've done</h2>
-    <ul>
-      <li>
-        <strong>Research in UCSB's networking MOMENT Lab</strong> — webscaping, querying, and analyzing broadband
-        affordability data using PostgreSQL, Docker, and Python.
-      </li>
-      <li>
-        <strong>IT Services at UCSB</strong> — improving support
-        workflows using ServiceNow, PowerBI, and internal tools.
-      </li>
-      <li>
-        <strong>Research Internships</strong> — at NASA Ames Research Center and Lawrence Berkeley Laboratory (<a href="https://ntrs.nasa.gov/citations/20230013018">HERE</a> is my published research paper from NASA)
-      </li>
-    </ul>
-  </div>
-</section>
 
 <section id="projects">
   <div class="projects-card">
