--- a/index.html
+++ b/index.html
@@ -99,8 +99,6 @@
         find fascinating.
         I'm interested in philosophy, aerospace, and art. In my free time
         you'll find me playing poker and doing all the NYT games. 
-        <br><br>
-        Check out the other pages of this site by using the links in the top left <3
         <br> <br> <br>
         Let's connect! <br><br>
         <strong>jovialow23@gmail.com | jovia@ucsb.edu | <a href="https:www.linkedin.com/in/jovia-low">Linkedin</a></strong>
@@ -109,6 +107,28 @@
   </div>
 </section>
 
-  <script src="script.js"></script>
+<section id="experience">
+  <div class="experience-card">
+    <h2>A snapshot of what I've done</h2>
+    <ul>
+      <li>
+        <strong>Research in UCSB's networking MOMENT Lab</strong> — webscaping, querying, and analyzing broadband
+        affordability data using PostgreSQL, Docker, and Python.
+      </li>
+      <li>
+        <strong>IT Services at UCSB</strong> — improving support
+        workflows using ServiceNow, PowerBI, and internal tools.
+      </li>
+      <li>
+        <strong>Research Internships</strong> — at NASA Ames Research Center and Lawrence Berkeley Laboratory (<a href="https://ntrs.nasa.gov/citations/20230013018">HERE</a> is my published research paper from NASA)
+      </li>
+      <li>
+        <strong>See my projects <a href="projects.html">here</strong></a>
+      </li>
+    </ul>
+  </div>
+</section>
+
+<script src="script.js"></script>
 </body>
 </html>
