--- a/index.html
+++ b/index.html
@@ -81,7 +81,6 @@
 
   </div>
 
-
 </section>
 
 
@@ -95,8 +94,8 @@
       <h2>About me</h2>
       <p>
         Hi there! I'm Jovia, and I'm currently studying computer science at UC Santa Barbara.
-        I chose CS because I love the idea of being able to use software in applications I 
-        find fascinating.
+        I chose CS because I love its beautiful intersection of problem solving, creativity,
+        and capacity to make incredible things for the world.
         I'm interested in philosophy, aerospace, and art. In my free time
         you'll find me playing poker and doing all the NYT games. 
         <br> <br> <br>
