--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
    undergraduate computer science student. UCSB Projects, 
    resume, linkedin, github, and contact information. 
    For CS and SWE recruiters.">
+   <link rel="icon" href="jovia_fav.ico">
+
 
   <link rel="stylesheet" href="styles.css" />
 
@@ -126,6 +128,7 @@
       </li>
     </ul>
   </div>
+  
 </section>
 
 <script src="script.js"></script>
