--- a/projects.html
+++ b/projects.html
@@ -2,6 +2,10 @@
 <html lang="en">
 <link rel="stylesheet" href="styles.css" />
 <body style="background-color: #121213">
+<head>
+    <link rel="icon" href="jovia_fav.ico">
+</head>
+
 
 <header>
     <a href="index.html">Home</a>
@@ -22,10 +26,9 @@
     <div class="tile"><div class="flip yellow">S</div></div>
 </section>
 
-
 <section id="projects">
   <div class="projects-card">
-    <h2>Some personal projects <a href="https://github.com/mintoku">(Github here)</a></h2>
+    <h2>Some personal projects <a href="https://github.com/mintoku">(Github)</a></h2>
       
         <li>
             <strong><a href="https://github.com/jenna360/acm-poker">Tournament Poker Bot</a></strong>
