--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,10 @@
 <link rel="stylesheet" href="styles.css" />
 <body style="background-color: #121213">
 
+<head>
+    <link rel="icon" href="jovia_fav.ico">
+</head>
+
 <header>
     <a href="index.html">Home</a>
     <a href="index.html#about">About</a>
