--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
       <h2>About me</h2>
       <p>
         Hi there! I'm Jovia, and I'm currently studying computer science at UC Santa Barbara.
-        I chose CS because I love its beautiful intersection of problem solving, creativity,
-        and capacity to make incredible things for the world.
+        I chose CS because I love how it encompasses problem solving, creativity,
+        and the capacity to make super cool things.
         I'm interested in philosophy, aerospace, and art. In my free time
         you'll find me playing poker and doing all the NYT games. 
         <br> <br> <br>
