--- a/projects.html
+++ b/projects.html
@@ -42,7 +42,7 @@
         <strong><a href="https://github.com/mintoku/flight-price-tracker">Southwest Flight Price tracker</a></strong>
         <ul>
             <li>Automated flight price tracking tool using Python, implementing screen-region capture, OCR parsing, and Discord webhook notifications.</li>
-            <li>UI automation techniques (PyAutoGUI), OCR processing (Tesseract), and event-driven architecture to monitor web content.</li>
+            <li>UI automation (PyAutoGUI), OCR processing (Tesseract) to monitor web content.</li>
         </ul>
         <li>
         <strong><a href="http://jovialow.me/">jovialow.me</a></strong>
