--- a/index.html
+++ b/index.html
@@ -124,6 +124,9 @@
         <strong>Research Internships</strong> — at NASA Ames Research Center and Lawrence Berkeley Laboratory (<a href="https://ntrs.nasa.gov/citations/20230013018">HERE</a> is my published research paper from NASA)
       </li>
       <li>
+        <strong>Club website maintenance</strong> — contributes to website development, design, and maintenance using Git workflows for various school clubs
+      </li>
+      <li>
         <strong>See my projects <a href="projects.html">here</strong></a>
       </li>
     </ul>
