--- a/projects.html
+++ b/projects.html
@@ -33,8 +33,7 @@
         <li>
             <strong><a href="https://github.com/jenna360/acm-poker">Tournament Poker Bot</a></strong>
         <ul>
-            <li>Python-based poker bot for an ACM online tournament, implementing hand evaluation and strategic decision logic</li>
-            <li>Game state logic and poker actions under constraints.</li>
+            <li>I made a Python-based poker bot for an ACM online tournament, implementing hand evaluation and strategic decision logic</li>
         </ul>
         </li>
 
@@ -45,14 +44,20 @@
             <li>UI automation (PyAutoGUI), OCR processing (Tesseract) to monitor web content.</li>
         </ul>
         <li>
-        <strong><a href="http://jovialow.me/">jovialow.me</a></strong>
+        <strong><a href="https://github.com/mintoku/website-portfolio">jovialow.me</a></strong>
         <ul>
-            <li>This website actually contains a serverless backend for the contact messaging feature.
-                Deployed API Gateway -> Lambda -> SES pipeline to  process and email form submissions.
-                Used AWS Lambda, AWS API Gateway, Amazon SES, IAM permissions, REST APIs
+            <li>How meta! This website actually contains a serverless backend for the contact messaging feature.
+                I deployed API Gateway -> Lambda -> SES pipeline to  process and email form submissions.
+                I used AWS Lambda, AWS API Gateway, Amazon SES, IAM permissions, REST APIs
             </li>
         </ul>
-        </li>        
+        
+        </li>     
+        <strong>...and many more</a></strong>
+        <ul>
+            I'm always thinking of something or trying things out, even if they don't make it onto here.
+            For the most up-to-date compilation of my work, check out my github (linked above)
+        </ul>   
         
       </li>
 
