--- a/projects.html
+++ b/projects.html
@@ -53,11 +53,13 @@
         </ul>
         
         </li>     
-        <strong>...and many more</a></strong>
-        <ul>
-            I'm always thinking of something or trying things out, even if they don't make it onto here.
-            For the most up-to-date compilation of my work, check out my github (linked above)
-        </ul>   
+        <li>
+            <strong>And many more!</a></strong>
+            <ul>
+                I'm always thinking of something or trying things out, even if they don't make it onto here.
+                For the most up-to-date compilation of my work, check out my github (linked above)
+            </ul>  
+        </li> 
         
       </li>
 
