--- a/projects.html
+++ b/projects.html
@@ -29,21 +29,26 @@
 <section id="projects">
   <div class="projects-card">
     <h2>Some personal projects <a href="https://github.com/mintoku">(Github)</a></h2>
-      
-        <li>
-            <strong><a href="https://github.com/jenna360/acm-poker">Tournament Poker Bot</a></strong>
-        <ul>
-            <li>I made a Python-based poker bot for an ACM online tournament, implementing hand evaluation and strategic decision logic</li>
-        </ul>
-        </li>
 
       <li>
         <strong><a href="https://github.com/mintoku/flight-price-tracker">Southwest Flight Price tracker</a></strong>
         <ul>
-            <li>Automated flight price tracking tool using Python, implementing screen-region capture, OCR parsing, and Discord webhook notifications.</li>
-            <li>UI automation (PyAutoGUI), OCR processing (Tesseract) to monitor web content.</li>
+            <li>I often buy plane tickets months early and find out later prices dropped drastically. 
+                So, I built this flight price tracking tool using Python, implementing screen-region capture,
+                 OCR parsing, and Discord webhook notifications (to text me the new prices!).</li>
+            <li>UI automation (PyAutoGUI), OCR processing (Tesseract) to monitor web content.
+            </li> 
         </ul>
-        <li>
+     
+        <strong><a href="https://github.com/jenna360/acm-poker">Tournament Poker Bot</a></strong>
+        <ul>
+            <li>A love child of my two favorite things: poker and coding. I made a Python-based poker 
+                bot for an ACM online tournament, implementing hand evaluation and strategic decision 
+                logic based just off what I knew about poker theory. As a challenge, almost no AI help 
+                was involved in the building of this bot</li>
+        </ul>
+        </li>
+
         <strong><a href="https://github.com/mintoku/website-portfolio">jovialow.me</a></strong>
         <ul>
             <li>How meta! This website actually contains a serverless backend for the contact messaging feature.
