edit project description

--- a/projects.html
+++ b/projects.html
@@ -44,8 +44,7 @@
         <ul>
             <li>A love child of my two favorite things: poker and coding. I made a Python-based poker 
                 bot for an ACM online tournament, implementing hand evaluation and strategic decision 
-                logic based just off what I knew about poker theory. As a challenge, almost no AI help 
-                was involved in the building of this bot</li>
+                logic based just off what I knew about poker theory.</li>
         </ul>
         </li>
 
@@ -53,7 +52,7 @@
         <ul>
             <li>How meta! This website actually contains a serverless backend for the contact messaging feature.
                 I deployed API Gateway -> Lambda -> SES pipeline to  process and email form submissions.
-                I used AWS Lambda, AWS API Gateway, Amazon SES, IAM permissions, REST APIs
+                I used AWS Lambda, AWS API Gateway, Amazon SES, IAM permissions, and REST APIs
             </li>
         </ul>
         
