edit project description

--- a/projects.html
+++ b/projects.html
@@ -42,7 +42,7 @@
      
         <strong><a href="https://github.com/jenna360/acm-poker">Tournament Poker Bot</a></strong>
         <ul>
-            <li>A love child of my two favorite things: poker and coding. I made a Python-based poker 
+            <li>A product of my two favorite things: poker and coding. I made a Python-based poker 
                 bot for an ACM online tournament, implementing hand evaluation and strategic decision 
                 logic based just off what I knew about poker theory.</li>
         </ul>
