added sb serves project

--- a/projects.html
+++ b/projects.html
@@ -28,10 +28,26 @@
 
 <section id="projects">
   <div class="projects-card">
-    <h2>Some personal projects <a href="https://github.com/mintoku">(Github)</a></h2>
+    <h2 style="font-size: 30px;">Some personal projects <a href="https://github.com/mintoku">(Github)</a></h2> <br>
+
+        <li>
+        <strong style="font-size: 24px;"><a href="https://github.com/mintoku/sb-serves">SB Serves (UCSB Student Services Marketplace)</a></strong>
+        <ul>
+            <li>AT UCSB, haircuts, eyebrow threading, nails, lashes--these are all services commonly 
+                provided by students, for students. My website “SB Serves” is a full-stack student service marketplace 
+                that centralizes  student-provided services to connect skilled students with people in need of 
+                well-priced services.
+            </li>
+            <li>The platform is built using Next.js, React, and TypeScript, with a UI
+                styled in Tailwind CSS.  Backend functionality is
+                implemented through Next.js API routes connected to Supabase PostgreSQL for
+                data storage, along with user authentication via Google OAuthand photo uploads using Supabase Storage.
+            </li> 
+        </ul>
+
 
       <li>
-        <strong><a href="https://github.com/mintoku/flight-price-tracker">Southwest Flight Price tracker</a></strong>
+        <strong style="font-size: 24px;"><a href="https://github.com/mintoku/flight-price-tracker">Southwest Flight Price tracker</a></strong>
         <ul>
             <li>I often buy plane tickets months early and find out later prices dropped drastically. 
                 So, I built this flight price tracking tool using Python, implementing screen-region capture,
@@ -40,15 +56,15 @@
             </li> 
         </ul>
      
-        <strong><a href="https://github.com/jenna360/acm-poker">Tournament Poker Bot</a></strong>
+        <strong style="font-size: 24px;"><a href="https://github.com/jenna360/acm-poker">Competitive Poker Bot</a></strong>
         <ul>
             <li>A product of my two favorite things: poker and coding. I made a Python-based poker 
-                bot for an ACM online tournament, implementing hand evaluation and strategic decision 
-                logic based just off what I knew about poker theory.</li>
+                bot for an ACM poker bot tournament, implementing hand evaluation and strategic decision 
+                logic based off what I knew about poker theory.</li>
         </ul>
         </li>
 
-        <strong><a href="https://github.com/mintoku/website-portfolio">jovialow.me</a></strong>
+        <strong style="font-size: 24px;"><a href="https://github.com/mintoku/website-portfolio">jovialow.me</a></strong>
         <ul>
             <li>How meta! This website actually contains a serverless backend for the contact messaging feature.
                 I deployed API Gateway -> Lambda -> SES pipeline to  process and email form submissions.
