edit sb serves project

--- a/projects.html
+++ b/projects.html
@@ -33,15 +33,12 @@
         <li>
         <strong style="font-size: 24px;"><a href="https://github.com/mintoku/sb-serves">SB Serves (UCSB Student Services Marketplace)</a></strong>
         <ul>
-            <li>AT UCSB, haircuts, eyebrow threading, nails, lashes--these are all services commonly 
-                provided by students, for students. My website “SB Serves” is a full-stack student service marketplace 
-                that centralizes  student-provided services to connect skilled students with people in need of 
+            <li>full-stack student service marketplace that centralizes  student-provided services to connect skilled students with people in need of 
                 well-priced services.
             </li>
-            <li>The platform is built using Next.js, React, and TypeScript, with a UI
-                styled in Tailwind CSS.  Backend functionality is
-                implemented through Next.js API routes connected to Supabase PostgreSQL for
-                data storage, along with user authentication via Google OAuthand photo uploads using Supabase Storage.
+            <li>Built using Next.js, React, and TypeScript, with a UI
+                styled in Tailwind CSS.  Backend implemented through Next.js API routes connected to Supabase PostgreSQL for
+                data storage
             </li> 
         </ul>
 
