edit project description

--- a/projects.html
+++ b/projects.html
@@ -31,11 +31,10 @@
     <h2 style="font-size: 30px;">Some personal projects <a href="https://github.com/mintoku">(Github)</a></h2> <br>
 
         <li>
-        <strong style="font-size: 24px;"><a href="https://github.com/mintoku/sb-serves">SB Serves (UCSB Student Services Marketplace)</a></strong>
+        <strong style="font-size: 24px;"><a href="https://github.com/mintoku/sb-serves">UCSB Student Services Marketplace</a></strong>
+        - <strong style="font-size: 24px;"><a href="https://sbserves.com">SB Serves Website</a></strong>
         <ul>
-            <li>full-stack student service marketplace that centralizes  student-provided services to connect skilled students with people in need of 
-                well-priced services.
-            </li>
+            <li>Full-stack student service marketplace that centralizes student-provided services to connect skilled students with customers            </li>
             <li>Built using Next.js, React, and TypeScript, with a UI
                 styled in Tailwind CSS.  Backend implemented through Next.js API routes connected to Supabase PostgreSQL for
                 data storage
