--- a/index.html
+++ b/index.html
@@ -113,6 +113,9 @@
     <h2>A snapshot of what I've done</h2>
     <ul>
       <li>
+        <strong>Check out my <a href="https:sbserves.com">latest full-stack project</strong></a>
+      </li>
+      <li>
         <strong>Research in UCSB's networking MOMENT Lab</strong> — webscaping, querying, and analyzing broadband
         affordability data using PostgreSQL, Docker, and Python.
       </li>
@@ -127,7 +130,7 @@
         <strong>Club website maintenance</strong> — contributes to website development, design, and maintenance using Git workflows for various school clubs
       </li>
       <li>
-        <strong>See my projects <a href="projects.html">here</strong></a>
+        <strong>See more of my projects <a href="projects.html">here</strong></a>
       </li>
     </ul>
   </div>
