changed font, made header

--- a/contact.html
+++ b/contact.html
@@ -7,11 +7,22 @@
     <link rel="icon" href="jovia_fav.ico">
 </head>
 
-<header>
-    <a href="index.html">Home</a>
-    <a href="index.html#about">About</a>
-    <a href="projects.html">Projects</a>
-    <a href="contact.html">Contact</a>
+<header class="site-header">
+    <div class="nav-inner">
+        <!-- Left: brand -->
+        <a class="brand" href="index.html" aria-label="Go to home">
+        <span class="brand-dot" aria-hidden="true"></span>
+        <span class="brand-name">Jovia Low</span>
+        </a>
+
+        <!-- Right: nav -->
+        <nav class="nav-links" aria-label="Primary">
+        <a href="index.html" class="nav-link">Home</a>
+        <a href="index.html#about" class="nav-link">About</a>
+        <a href="projects.html" class="nav-link">Projects</a>
+        <a href="contact.html" class="nav-link nav-cta">Contact</a>
+        </nav>
+    </div>
 </header>
 
 
